--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@ html {
 }
 
 .content  {
-  max-inline-size: 1200px;
+  max-inline-size: 1140px;
   inline-size: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -155,7 +155,7 @@ html {
 .button {
   border: 1px solid white;
   color: white;
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 700;
   font-size: 18px;
   background-color: transparent;
@@ -245,13 +245,13 @@ html {
 
 .content__video-card-title {
   margin-block-end: 6px;
-  font-family: 'Oswald';
+  font-family: 'Oswald', sans-serif;
   font-size: 30px;
   text-transform: uppercase;
 }
 
 .content__video-card-description {
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   line-height: 16px;
 }
 
